# lnp-node

./: .dockerignore  .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config_spec.toml  license_header
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: binaries.yml  library.yml  test.yml
cli/: Cargo.toml  build.rs
cli/src/: command.rs  main.rs  opts.rs
contrib/: demo.sh  test.sh
demo/: README.md
doc/: LNP Node 0.1 Alpha 4 guide.md  wallet.md  workflows.md
doc/demo-alpha.4/: Dockerfile  README.md  docker-compose.yml
doc/demo-beta.1/: README.md  docker-compose.yml
doc/demo-beta.1/docker/lnp-node/: Dockerfile
doc/demo-beta.1/docker/rgb-node/: Dockerfile
doc/workflows/: channel_accept.mmd  channel_propose.mmd  drafts.md
node/: Cargo.toml  build.rs
node/src/: config.rs  error.rs  lib.rs  opts.rs  service.rs  state_machine.rs
node/src/bus/: ctl.rs  mod.rs
node/src/channeld/: mod.rs  opts.rs  runtime.rs
node/src/channeld/state_machines/: channel_accept.rs  channel_propose.rs  mod.rs
node/src/channeld/storage/: mod.rs
node/src/cli/: command.rs  mod.rs
node/src/gossipd/: opts.rs  runtime.rs
node/src/i9n/: client.rs  ctl.rs  mod.rs  rpc.rs
node/src/lnpd/: daemons.rs  funding_wallet.rs  runtime.rs
node/src/lnpd/state_machines/: channel_launch.rs
node/src/peerd/: runtime.rs
node/src/routed/: runtime.rs
node/src/signd/: runtime.rs
node/src/watchd/: runtime.rs
rpc/: Cargo.toml
rpc/src/: client.rs  error.rs  lib.rs  listen_addr.rs  messages.rs  service_id.rs
shell/: _channeld  _channeld.ps1  _connectiond  _connectiond.ps1  _gossipd  _gossipd.ps1  _lnp-cli  _lnp-cli.ps1  _lnpd  _lnpd.ps1  _peerd  _peerd.ps1  _routed  _routed.ps1  _signd  _signd.ps1  _watchd  _watchd.ps1  channeld.bash  connectiond.bash  gossipd.bash  lnp-cli.bash  lnpd.bash  peerd.bash  routed.bash  signd.bash  watchd.bash
src/: .opts.rs.swp  automata.rs  config.rs  constants.rs  conv.rs  daemon_id.rs  error.rs  lib.rs  main.rs  opts.rs  service.rs  state_machine.rs
src/api/: config.rs  error.rs  message.rs  mod.rs  publisher.rs  reply.rs  request.rs  responder.rs
src/bus/: ctl.rs  mod.rs  reports.rs
src/channeld/: mod.rs  opts.rs  persistance.rs  runtime.rs  state.rs
src/channeld/automata/: accept.rs  channel_accept.rs  channel_propose.rs  mod.rs  propose.rs
src/channeld/state_machines/: channel_accept.rs  channel_propose.rs  mod.rs
src/channeld/storage/: disk.rs  driver.rs  mod.rs
src/cli/: command.rs  config.rs  format.rs  mod.rs  opts.rs  runtime.rs
src/connectiond/: mod.rs  opts.rs  rpc.rs  runtime.rs
src/gossipd/: opts.rs  runtime.rs
src/i9n/: client.rs  config.rs  ctl.rs  mod.rs  rpc.rs  runtime.rs
src/lnpd/: daemons.rs  funding.rs  funding_wallet.rs  mod.rs  opts.rs  runtime.rs
src/lnpd/automata/: channel_launch.rs  launch.rs  mod.rs  report.rs  swap.rs
src/lnpd/state_machines/: channel_launch.rs  mod.rs
src/manager/: config.rs  constants.rs
src/manager/api/: config.rs  runtime.rs
src/monitor/: mod.rs  runtime.rs
src/msgbus/: command.rs  constants.rs  error.rs  mod.rs
src/msgbus/proc/: connect.rs  mod.rs
src/peer/: config.rs  mod.rs  runtime.rs
src/peerd/: bifrost.rs  bolt.rs  config.rs  error.rs  mod.rs  opts.rs  peer_socket.rs  runtime.rs  supervisor.rs
src/peerd/api/: config.rs  error.rs  service.rs
src/peerd/p2p/: config.rs  error.rs  service.rs
src/routed/: mod.rs  opts.rs  runtime.rs
src/rpc/: client.rs  exports.rs  mod.rs  reply.rs  request.rs
src/signd/: mod.rs  opts.rs  runtime.rs
src/swapd/: mod.rs  opts.rs  runtime.rs  worker.rs
src/swapd/automata/: mod.rs
src/temp/: lnpd.rs
src/util/: mod.rs
src/watchd/: mod.rs  opts.rs  runtime.rs  worker.rs
src/wired/: config.rs  error.rs  mod.rs  runtime.rs
src/wired/bus/: config.rs  error.rs  mod.rs  service.rs
src/wired/monitor/: config.rs  error.rs  mod.rs  runtime.rs  service.rs
src/wired/peer/: api.rs  config.rs  error.rs  mod.rs  peer.rs  service.rs
src/wired/wire/: config.rs  error.rs  mod.rs  service.rs
