[package]
name = "lnp-cli"
description = "LNP node command-line interface"
version = "0.8.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
license = "MIT"
keywords = ["bitcoin", "node", "lightning-network", "smart-contracts", "lnp"]
edition = "2018"
readme = "../README.md"
exclude = []

[[bin]]
path = "src/main.rs"
name = "lnp-cli"

[dependencies]
amplify = "3.12.0"
lnp-core = { version = "0.8.0", git = "https://github.com/LNP-WG/lnp-core", default-features = false }
lnp_rpc = { version = "0.8.0", path = "../rpc" }
lightning-invoice = { version = "0.14.0", optional = true }
internet2 = "0.8.0-beta.1"
microservices = { version = "0.8.0-rc.2", default-features = false, features = ["cli"] }
clap = { version = "~3.1.18", features = ["derive", "env"] }
log = "0.4.14"
zmq = { package = "zmq2", version = "0.5.0" }

[features]
default = ["bolt", "bifrost"]
all = ["bolt", "bifrost"]

bolt = ["lnp-core/bolt", "lightning-invoice", "lnp_rpc/bolt"]
bifrost = ["lnp-core/bifrost", "lnp_rpc/bifrost"]
