[package]
name = "lnp-cli"
description = "LNP node command-line interface"
version = "0.8.0-alpha.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
license = "MIT"
keywords = ["bitcoin", "node", "lightning-network", "smart-contracts", "lnp"]
categories = ["network-programming", "command-line-utilities"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "lnp-cli"

[dependencies]
amplify = "3.12.0"
lnp-core = { version = "0.8.0-alpha.1", git = "https://github.com/LNP-WG/lnp-core", default-features = false }
lnp_rpc = { version = "0.8.0-alpha.1", path = "../rpc" }
lightning-invoice = { version = "0.14.0", optional = true }
internet2 = "0.8.0-beta.1"
microservices = { version = "0.8.0-rc.2", default-features = false, features = ["cli"], git = "https://github.com/Internet2-WG/rust-microservices" }
shellexpand = "2.1"
clap = { version = "~3.1.18", features = ["derive", "env"] }
log = "0.4.14"

[build-dependencies]
amplify = "3.12.0"
clap = { version = "~3.1.18", features = ["derive", "env"] }
clap_complete = "~3.1.4"
lightning-invoice = "0.14.0"
internet2 = "0.8.0-beta.1"
lnp-core = { version = "0.8.0-alpha.1", git = "https://github.com/LNP-WG/lnp-core", default-features = false }
lnp_rpc = { version = "0.8.0-alpha.1", path = "../rpc" }
configure_me_codegen = "0.4"

[features]
default = ["bolt", "bifrost"]
all = ["bolt", "bifrost"]

bolt = ["lnp-core/bolt", "lightning-invoice", "lnp_rpc/bolt"]
bifrost = ["lnp-core/bifrost", "lnp_rpc/bifrost"]
