[package]
name = "lnp_rpc"
description = "LNP node RPC API"
version = "0.8.0-beta.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
license = "MIT"
keywords = ["bitcoin", "node", "lightning-network", "smart-contracts", "rpc"]
categories = ["network-programming"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"

[lib]
name = "lnp_rpc"

[dependencies]
amplify = "3.12.1"
strict_encoding = "0.8.0"
lnp-core = { version = "0.8.0-beta.1", default-features = false }
lnpbp = "0.8.0"
bitcoin = { version = "0.28.1", features = ["rand"] }
lightning-invoice = { version = "0.16.0", optional = true }
internet2 = "0.8.0"
microservices = { version = "0.8.1", default-features = false, features = ["client"] }
descriptor-wallet = "0.8.0"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", optional = true }
serde_yaml = { version = "0.8.23", optional = true }
log = "0.4.14"
colored = "2.0.0"
zmq = { package = "zmq2", version = "0.5.0" }

[features]
default = ["serde", "bolt", "bifrost"]
all = ["serde", "bolt", "bifrost"]

bolt = ["lnp-core/bolt", "lightning-invoice"]
bifrost = ["lnp-core/bifrost"]

serde = [
    "serde_crate", "serde_with", "serde_yaml", "bitcoin/use-serde",
    "amplify/serde", "internet2/serde", "microservices/serde",
    "lnpbp/serde", "descriptor-wallet/serde", "lnp-core/serde"
]
