[package]
name = "lnp_rpc"
description = "LNP node RPC API"
version = "0.9.0-rc.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
license = "MIT"
keywords = ["bitcoin", "node", "lightning-network", "smart-contracts", "rpc"]
categories = ["network-programming"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"

[lib]
name = "lnp_rpc"

[dependencies]
amplify = "3.13.0"
strict_encoding = "0.9.0-rc.2"
bitcoin_scripts = "0.9.0-rc.1"
lnp-core = { version = "0.9.0-rc.1", default-features = false }
lnpbp = "0.9.0-rc.1"
bitcoin = { version = "0.29.2", features = ["rand"] }
lightning-invoice = { version = "0.21.0", optional = true }
internet2 = "0.9.0-rc.1"
microservices = { version = "0.9.0-rc.1", default-features = false, features = ["client"] }
descriptor-wallet = "0.9.0-rc.1"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.14", optional = true }
serde_yaml = { version = "0.8", optional = true }
log = "0.4.14"
colored = "2.0.0"
zmq = { package = "zmq2", version = "0.5.0" }

[features]
default = ["serde", "bolt", "bifrost"]
all = ["serde", "bolt", "bifrost"]

bolt = ["lnp-core/bolt", "lightning-invoice"]
bifrost = ["lnp-core/bifrost"]

serde = [
    "serde_crate", "serde_with", "serde_yaml", "bitcoin/serde",
    "amplify/serde", "internet2/serde", "microservices/serde",
    "lnpbp/serde", "descriptor-wallet/serde", "lnp-core/serde"
]
